--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,3 +1,38 @@
-<select [(ngModel)]="currentPage" (change)="menuSwitch()">
+<mat-nav-list>
+  <a mat-list-item routerLink="/main" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Main</span>
+</a>
+  <a mat-list-item routerLink="/login" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Login</span>
+  </a>
+  <a mat-list-item routerLink="/signup" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Signup</span>
+  </a>
+  <a mat-list-item routerLink="/products" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Products</span>
+  </a>
+  <a mat-list-item routerLink="/delivery" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Delivery</span>
+  </a>
+  <a mat-list-item routerLink="/gallery" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Gallery</span>
+  </a>
+  <a mat-list-item routerLink="/contact" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Contact</span>
+  </a>
+  <a mat-list-item routerLink="/profile">
+    <mat-icon>menu</mat-icon>
+    <span>Profile</span>
+  </a>
 
-</select>
+</mat-nav-list>
+<!--<select [(ngModel)]="currentPage" (change)="menuSwitch()">-->
+
+<!--</select>-->
