--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,15 +1,20 @@
 div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
 }
 
 .main_component {
-    height: 100vh;
+  height: 100vh;
+  align-items: center;
 }
 
 span {
-    padding: 5px 5px 5px 5px;
+  padding: 5px 5px 5px 5px;
+}
+
+mat-form-field {
+  width: 50%;
 }
