--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,33 +1,33 @@
 <div class="main_component">
-    <div class="div-flex">
-        <h1>Register an account!</h1>
-        <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-            <div>
-                <label for="email">Email: </label>
-                <input type="text" formControlName="email" />
-            </div>
-            <div>
-                <label for="password">Password: </label>
-                <input type="password" formControlName="password" />
-            </div>
-            <div>
-                <label for="rePassword">Confirm password: </label>
-                <input type="password" formControlName="rePassword" />
-            </div>
-            <div formGroupName="name">
-                <div>
-                    <label for="firstname">First name: </label>
-                    <input type="text" formControlName="firstname" />
-                </div>
-                <div>
-                    <label for="firstname">Last name: </label>
-                    <input type="text" formControlName="lastname" />
-                </div>
-            </div>
-            <div>
-                <button type="submit">Register</button>
-                <button (click)="goBack()">Back</button>
-            </div>
-        </form>
-    </div>
+  <div class="div-flex">
+    <h1>Register an account!</h1>
+    <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+      <mat-form-field>
+        <mat-label for="email">Email: </mat-label>
+        <input matInput type="text" formControlName="email"/>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="password">Password: </mat-label>
+        <input matInput type="password" formControlName="password"/>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="rePassword">Confirm password: </mat-label>
+        <input matInput type="password" formControlName="rePassword"/>
+      </mat-form-field>
+      <div class="sub-form" formGroupName="name">
+        <mat-form-field>
+          <mat-label for="firstname">First name: </mat-label>
+          <input matInput type="text" formControlName="firstname"/>
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label for="firstname">Last name: </mat-label>
+          <input matInput type="text" formControlName="lastname"/>
+        </mat-form-field>
+      </div>
+      <div>
+        <span class="buttons"> <button color="primary" mat-raised-button type="submit">Register</button></span>
+        <span class="buttons"> <button color="primary" mat-raised-button (click)="goBack()">Back</button></span>
+      </div>
+    </form>
+  </div>
 </div>
