--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -13,3 +13,20 @@
 form div {
     padding: 5px 5px 5px 5px;
 }
+
+form{
+  display: inline-grid;
+  width: 50%;
+  align-self: center;
+}
+
+.sub-form{
+  width: 100%;
+  display: inline-grid;
+}
+.buttons{
+  padding: 5px;
+}
+button{
+  width: 100px;
+}
