--- a/src/app/pages/gallery/viewer/viewer.component.scss
+++ b/src/app/pages/gallery/viewer/viewer.component.scss
@@ -31,3 +31,15 @@ form {
     width: 100%;
     text-align: center;
 }
+
+.div-card{
+    padding: 50px;
+}
+
+mat-form-field{
+    width: 100%;
+}
+
+mat-card-content{
+    text-align: center;
+}
