--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,3 +1,15 @@
+
 <ng-content></ng-content>
 
-<p>Under development...</p>
+<div class="main_component div-flex">
+    <mat-card class="div-flex">
+        <mat-card-header>
+            <mat-card-title>Contact</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <p><mat-icon>call</mat-icon>+36 222 1111</p>
+            <p><mat-icon>email</mat-icon> text&#64;gmail.com</p>
+        </mat-card-content>
+    </mat-card>
+</div>
+
