--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,1 +1,13 @@
-<p>products works!</p>
+
+<div fxLayoutAlign="center" fxLayout="row" class="category-container">
+    <mat-card class="category-card category-container" *ngFor="let category of categories">
+        <mat-card-header>
+            <mat-card-title>{{ category }}</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-button color="primary">Tovább</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
