--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,6 @@
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-
       <div fxHide.gt-xs>
       <button mat-icon-button (click)="onToggleSidenav(sidenav)">
         <mat-icon>menu_book</mat-icon>
@@ -15,14 +14,12 @@
         <ul fxLayout fxLayoutGap="10px" class="navigation-items">
           <li><a routerLink="/main">Main</a></li>
           <li><a routerLink="/login">Login</a></li>
-          <li><a routerLink="/signup">Register</a></li>
+<!--          <li><a routerLink="/signup">Register</a></li>-->
           <li><a routerLink="/products">Termékek</a></li>
           <li><a routerLink="/delivery">Szállítás</a></li>
           <li><a routerLink="/gallery">Gallery</a></li>
           <li><a routerLink="/contact">Contact</a></li>
           <li><a routerLink="/profile">Profil</a></li>
-
-
         </ul>
       </div>
     </mat-toolbar>
