--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <span *ngIf="loading" class="loading-indicator"><mat-spinner></mat-spinner>
 </span>
 <div class="main_component">
-  <h1>Welcome to my homepage!</h1>
+  <h1>Bejelentkezés</h1>
   <mat-form-field>
     <mat-label for="email">Email:</mat-label>
     <input matInput type="text" [formControl]="email"/>
@@ -12,8 +12,10 @@
   </mat-form-field>
   <span>
       <span>
-        <button mat-raised-button color="primary" (click)="login()">Login</button></span>
-       <span> <button mat-raised-button color="primary" [routerLink]="'/signup'">Sign Up</button></span>
+        <button class="login-button" mat-raised-button color="primary" (click)="login()">Bejelentkezés</button></span>
+        <br><br>
+        <span><a href="" color="primary" [routerLink]="'/signup'">Még nincs fiókom</a></span>
+    <!--       <span> <button mat-raised-button color="primary" [routerLink]="'/signup'">Sign Up</button></span>-->
     </span>
   <!-- AsyncPipe -->
   <!--<p>{{loadingObservation | async}}</p>-->
