--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,13 +1,14 @@
-
-<div fxLayoutAlign="center" fxLayout="row" class="category-container">
-    <mat-card class="category-card category-container" *ngFor="let category of categories">
-        <mat-card-header>
-            <mat-card-title>{{ category }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-        </mat-card-content>
-        <mat-card-actions>
-            <button mat-button color="primary">Tovább</button>
-        </mat-card-actions>
+<div class="outer-container">
+  <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container">
+    <mat-card fxFlex="calc(50% - 20px)" class="category-card" *ngFor="let category of categories">
+      <mat-card-header>
+        <mat-card-title>{{ category }}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button color="primary">Tovább</button>
+      </mat-card-actions>
     </mat-card>
+  </div>
 </div>
