--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,6 +1,6 @@
 <div class="main_component">
   <div class="div-flex">
-    <h1>Register an account!</h1>
+    <h1>Regisztráció</h1>
     <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
       <mat-form-field>
         <mat-label for="email">Email: </mat-label>
@@ -25,8 +25,11 @@
         </mat-form-field>
       </div>
       <div>
-        <span class="buttons"> <button color="primary" mat-raised-button type="submit">Register</button></span>
-        <span class="buttons"> <button color="primary" mat-raised-button (click)="goBack()">Back</button></span>
+        <span class="buttons"> <button color="primary" mat-raised-button type="submit">Regisztráció</button></span>
+        <br><br>
+<!--        <span><a href="" color="primary" (click)="goBack()">Már van fiókom</a></span>-->
+        <span><a href="" color="primary" [routerLink]="'/login'">Már van fiókom</a></span>
+        <!--        <span class="buttons"> <button color="primary" mat-raised-button (click)="goBack()">Back</button></span>-->
       </div>
     </form>
   </div>
