--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,14 +1,14 @@
 <div class="outer-container">
   <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container">
-    <mat-card fxFlex="calc(50% - 20px)" class="category-card" *ngFor="let category of categories; let i = index">
-      <mat-card-header>
-        <mat-card-title>{{ category }}</mat-card-title>
+    <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of categories; let i = index">
+      <mat-card-header class="category-title">
+        <mat-card-title class="category-title">{{ category }}</mat-card-title>
       </mat-card-header>
       <mat-card-content class="image-container">
         <img [src]="categoryImages[i]" alt="Category Image" class="category-image">
       </mat-card-content>
-      <mat-card-actions>
-        <button mat-button color="primary">Tovább</button>
+      <mat-card-actions class="category-button">
+        <button mat-raised-button color="primary">Tovább</button>
       </mat-card-actions>
     </mat-card>
   </div>
