--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,5 +1,5 @@
 <div class="outer-container">
-  <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container">
+  <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container" *ngIf="!isFilterActive">
     <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of categories; let i = index">
       <mat-card-header class="category-title">
         <mat-card-title class="category-title">{{ category }}</mat-card-title>
@@ -12,6 +12,24 @@
       </mat-card-actions>
     </mat-card>
   </div>
+
+
+  <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container" *ngIf="isFilterActive">
+    <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of filteredProducts; let i = index">
+      <mat-card-header class="category-title">
+        <mat-card-title class="category-title">{{ category.name }}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content class="image-container">
+        <img [src]="categoryImagesFiltered[i]" alt="Category Image" class="category-image">
+      </mat-card-content>
+<!--      <mat-card-actions class="category-button">-->
+<!--        <button mat-raised-button color="primary" (click)="onSelectCategory(categoriesName[i])">Tovább</button>-->
+<!--      </mat-card-actions>-->
+    </mat-card>
+  </div>
+
+
+
 
   <div style="border: 1px solid black; width: 500px; height: 500px">
     <ul *ngIf="filteredProducts.length > 0">
