--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,7 @@
           <li><a routerLink="/delivery">Szállítás</a></li>
           <li><a routerLink="/gallery">Gallery</a></li>
           <li><a routerLink="/contact">Contact</a></li>
+          <li><a routerLink="/basket">Kosár</a></li>
           <li><a routerLink="/profile">Profil</a></li>
         </ul>
       </div>
