--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -27,6 +27,10 @@
     <mat-icon>menu</mat-icon>
     <span>Contact</span>
   </a>
+  <a mat-list-item routerLink="/basket" (click)="close()">
+    <mat-icon>menu</mat-icon>
+    <span>Basket</span>
+  </a>
   <a mat-list-item routerLink="/profile">
     <mat-icon>menu</mat-icon>
     <span>Profile</span>
