--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -29,6 +29,7 @@
         <mat-card-title class="category-title">{{ category.name }}</mat-card-title>
       </mat-card-header>
       <mat-card-content class="image-container">
+<!--        <p>{{category.id}}</p>-->
         <img [src]="categoryImagesFiltered[i]" alt="Category Image" class="category-image" >
       </mat-card-content>
 <!--      <mat-card-actions class="category-button">-->
