KEPEK RENDESEN BETOLTVE MI A FASZ MUKODOTT aszinkron mukodes volt a ,,hiba"

--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -30,6 +30,7 @@
       </mat-card-header>
       <mat-card-content class="image-container">
 <!--        <p>{{category.id}}</p>-->
+<!--*ngIf="categoryImagesFiltered[i].toLowerCase().includes(filteredProducts)" -->
         <img [src]="categoryImagesFiltered[i]" alt="Category Image" class="category-image" >
       </mat-card-content>
 <!--      <mat-card-actions class="category-button">-->
