kepek feltoltese firebasebe

--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -15,6 +15,27 @@
   max-width: 500px
 }
 
+
+/*
+.category-container {
+  height: 100%;
+  width: 50%;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  vertical-align: center;
+  padding: 10px;
+  overflow-y: auto;
+}
+*/
+/*
+.category-card {
+  margin: 10px;
+  max-width: 500px;
+  margin-bottom: 20px;
+}
+*/
+
 .outer-container {
   height: 100vh;
   display: flex;
@@ -46,4 +67,9 @@
 .category-button{
   font-size: 1.5em;
   align-self: center;
+}
+
+mat-card-content img{
+  width: 400px;
+  height: 200px;
 }
