--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,3 +1,9 @@
+//html, body {
+//  margin: 0;
+//  height: 100%;
+//  overflow: hidden;
+//}
+
 div {
   display: flex;
   flex-direction: column;
@@ -5,20 +11,64 @@ div {
   text-align: center;
   height: 100%;
 }
-
+.main_component *{
+  font-family: "Signika Negative Light", cursive;
+  font-weight: bold;
+}
 .main_component {
   height: 100vh;
   align-items: center;
+  overflow: hidden;
+  font-family: 'Banchrift', sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-
+a{
+  //color: #41B06E;
+  font-size: 2vh;
+}
 span {
   padding: 5px 5px 5px 5px;
 }
 
 mat-form-field {
   width: 50%;
+  align-self: center;
 }
+
 //.login-button {
 //  background-color: red !important;
 //  color: white;
 //}
+
+
+
+.card {
+  width: 50%;
+  height: 75%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.card-body {
+  text-align: center;
+}
+
+.mat-form-field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.login-button {
+  margin-top: 20px;
+  width: 25%;
+  align-self: center;
+}
+
+.loading-indicator {
+  margin-top: 20px;
+}
