--- a/src/app/pages/signup/signup.component.scss
+++ b/src/app/pages/signup/signup.component.scss
@@ -11,7 +11,7 @@
 }
 
 form div {
-    padding: 5px 5px 5px 5px;
+    padding: 5px 0px 5px 0px;
 }
 
 form{
@@ -20,13 +20,49 @@ form{
   align-self: center;
 }
 
-.sub-form{
-  width: 100%;
-  display: inline-grid;
+a{
+  font-size: 2vh;
 }
 .buttons{
   padding: 5px;
 }
 button{
-  width: 100px;
+  width: 200px;
 }
+div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+}
+.main_component *{
+  font-family: "Signika Negative Light", cursive;
+  font-weight: bold;
+}
+.main_component {
+  height: 100vh;
+  align-items: center;
+  overflow: hidden;
+  font-family: 'Banchrift', sans-serif;
+}
+.card {
+  width: 50%;
+  height: 75%;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+
+.card-body {
+  text-align: center;
+}
+
+.mat-form-field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
