--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,3 +31,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 100%;
   background-color: rgba(0,0,0,0.3);
 }
+
+*{
+  overflow: hidden;
+}
