login enter nyomasra nem jelentkeezik be

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,3 +22,26 @@
   </div>
 </div>
 
+<!--<div class="main_component">-->
+<!--  <div class="card">-->
+<!--    <div class="card-body">-->
+<!--      <h1>Bejelentkezés</h1>-->
+<!--      <form (ngSubmit)="login()">-->
+<!--        <mat-form-field>-->
+<!--          <mat-label for="email">Email cím:</mat-label>-->
+<!--          <input matInput type="text" [formControl]="email"/>-->
+<!--        </mat-form-field>-->
+<!--        <mat-form-field>-->
+<!--          <mat-label for="password">Jelszó:</mat-label>-->
+<!--          <input matInput type="password" [formControl]="password"/>-->
+<!--        </mat-form-field>-->
+<!--        <button type="submit" class="login-button" mat-raised-button color="primary">Bejelentkezés</button>-->
+<!--      </form>-->
+<!--      <br>-->
+<!--      <span><a href="" color="primary" [routerLink]="'/signup'">Még nincs fiókom</a></span>-->
+<!--      <div *ngIf="loading" class="loading-indicator">-->
+<!--        <mat-spinner></mat-spinner>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
