--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -3,18 +3,18 @@
     <div class="card-body">
       <h1>Felhasználó profil</h1>
       <div *ngIf="loggedInUser">
-        <p>Üdv, {{ loggedInUser.name.firstname }}!</p>
+        <h3>Üdv, {{ loggedInUser.name.firstname }}!</h3>
       </div>
-      <h2>Név: {{ loggedInUser?.name.lastname }} {{ loggedInUser?.name.firstname }}</h2>
-      <h2>Email: {{ loggedInUser?.email }}</h2>
+      <h2 >Jelenlegi név: {{ loggedInUser?.name.lastname}} {{ loggedInUser?.name.firstname}}</h2>
+      <h2>Jelenlegi email: {{ loggedInUser?.email }}</h2>
       <form [formGroup]="userDataChangeGroup">
         <mat-form-field class="form-field">
-          <mat-label for="emailChange">Email cím</mat-label>
+          <mat-label for="emailChange">Email cím változtatása</mat-label>
           <input matInput type="text" formControlName="emailChange">
         </mat-form-field>
         <div class="sub-form">
           <mat-form-field class="sub-form-field">
-            <mat-label for="passwordChange">Jelszó:</mat-label>
+            <mat-label for="passwordChange">Jelszó változtatása</mat-label>
             <input matInput formControlName="passwordChange" type="password" />
           </mat-form-field>
           <mat-form-field class="sub-form-field">
