stringkent lehetett latni a jelszot, nem volt jo. egyszerre lehet emailt es jelszot valtoztatni mostmar rendesen

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -23,6 +23,8 @@
           </mat-form-field>
         </div>
         <button mat-raised-button color="primary" (click)="changeUserData()">Profil frissítése</button>
+        <button mat-raised-button color="warn" (click)="deleteProfile()">Profil törlése</button>
+
       </form>
     </div>
   </div>
