--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -4,7 +4,7 @@
 <div class="main_component div-flex">
     <mat-card class="div-flex">
         <mat-card-header>
-            <mat-card-title>Contact</mat-card-title>
+            <mat-card-title>Kapcsolat</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <p><mat-icon>call</mat-icon>+36 222 1111</p>
