--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,3 +1,7 @@
 <div class="main_component">
-    <h1>Welcome to my homepage!</h1>
+  <h1>Üdvözöllek online zöldség-gyümölcs üzletünkben{{ loggedInUser ? ", " + loggedInUser.name.firstname : '' }}!</h1>
+  <h3>Rendelj még ma pár kattintással, és akár 24 órán belül a küszöbödön lesz a legfrissebb és legszebb csomag, amit valaha láttál!</h3>
+  <h3>Regisztrálj rendszerünkben, így nem szükséges minden rendelésnél újra megadnod az adatokat, és részt vehetsz a FruitPontok gyűjtésében is! Kezdetnek 30-at ajándékba adunk a Klubba való belépésedért!</h3>
+  <h3>Üdvözöl: a Fruitshop.hu csapata</h3>
+  <h2>FRUITSHOP.HU - Prémium áru szívvel-lélekkel.</h2>
 </div>
