--- a/src/app/pages/delivery/delivery.component.html
+++ b/src/app/pages/delivery/delivery.component.html
@@ -1,1 +1,25 @@
-<p>delivery works!</p>
+<p>
+    Kiszállítási információk
+    A megrendelt áru átvételére a következő lehetőségek közül választhatsz áruházunkban:
+
+    HÁZHOZ SZÁLLÍTÁS
+    Solymáron, Pilisszentivánon, Pilisvörösváron, Piliscsabán, Magdolnavölgyben és a II. kerület egyes részein (I. zóna, részletek a táblázatban alább) saját futárszolgálatunk segítségével díjmentesen juttatjuk el Hozzád a megrendelt terméket a soron következő szállítási napon. Az ingyenes kiszállítási opció igénybevételének minimuma a megjelölt településeken a 10.000 Forint értékű megrendelés.
+
+    Az I., a XII. és a II. kerület egyes részein, valamint Remeteszőlős, Piliscsév, Budakeszi, Pilisjászfalu, Üröm, Pilisborosjenő, Nagykovácsi területére (II. zóna, részletek a táblázatban alább) a kiszállítás igénybevételéhez a megrendelés minimális összege 10.000 Ft, a kiszállítás díja pedig 1.490 Ft.
+
+    Budapest III., IV., V., VI., VII., VIII., IX., XI., XIII., XIV., XV., XVI. kerületeiben és Budakalászon (III. zóna) a rendelési minimum 15.000 Ft, ha szeretnéd igénybe venni a házhoz szállítási opciót, melynek díja 2.490 Ft.
+
+    BOLTI ÁTVÉTEL:
+    A fenti területeken kívül az országon belül bárhonnan fogadunk megrendelést, ezekben az esetekben azonban csak személyes átvételre van lehetőség.
+
+    Minden esetben és minden zónában kérhetsz személyes átvételt solymári boltunkban, mely az Interspar melletti üzletsoron található. A személyes átvételre a bolt nyitva tartási idejében van lehetőség HÉTFŐTŐL PÉNTEKIG.
+
+
+
+    Nyitva tartás:
+
+    Hétfőtől péntekig: 7.30-19.00
+    Szombaton: 7.30-14.00
+    Telefonszám:
+    Email:
+</p>
