--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -7,8 +7,8 @@
             <mat-card-title>Kapcsolat</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <p><mat-icon>call</mat-icon>+36 222 1111</p>
-            <p><mat-icon>email</mat-icon> text&#64;gmail.com</p>
+            <h2><mat-icon>call</mat-icon>+36 222 1111</h2>
+            <h2><mat-icon>email</mat-icon> text&#64;gmail.com</h2>
         </mat-card-content>
     </mat-card>
 </div>
