--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,8 @@
 <div class="main_component">
   <div class="card">
     <div class="card-body">
-      <h1>Bejelentkezés</h1>
+
+      <h1 class="favicon-container">Bejelentkezés <img src="assets/strawberry_fruit.ico" class="favicon" alt=""></h1>
       <mat-form-field>
         <mat-label for="email">Email cím:</mat-label>
         <input matInput type="text" [formControl]="email"/>
