--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -3,7 +3,7 @@
   <div class="card">
     <div class="card-body">
   <div class="div-flex">
-    <h1>Regisztráció</h1>
+    <h1 class="favicon-container">Regisztráció <img src="assets/tomato_vegetable.ico" class="favicon" alt=""></h1>
     <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
       <mat-form-field>
         <mat-label for="email">Email cím: </mat-label>
