--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
 <div class="main_component">
   <div class="card">
     <div class="card-body">
-
+     <p>nagypista&#64;gmail.com</p>
       <h1 class="favicon-container">Bejelentkezés <img src="assets/strawberry_fruit.ico" class="favicon" alt=""></h1>
       <mat-form-field>
         <mat-label for="email">Email cím:</mat-label>
