--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,7 @@
           <li><mat-icon>local_shipping</mat-icon><a routerLink="/delivery">Szállítás</a></li>
 <!--          <li><a routerLink="/gallery">Gallery</a></li>-->
           <li><mat-icon>alternate_email</mat-icon><a routerLink="/contact">Rólunk</a> </li>
+          <li><mat-icon>settings</mat-icon><a routerLink="/contact">Kuponok?</a> </li>
           <li><mat-icon>shopping_basket</mat-icon><a class="before-login-icon" routerLink="/basket">Kosár</a> </li>
           <li *ngIf="!(loggedInUser)"><mat-icon>login</mat-icon><a routerLink="/login">Bejelentkezés</a>  </li>
           <li *ngIf="(loggedInUser)"><mat-icon>account_circle</mat-icon><a routerLink="/profile">Profil</a></li>
