--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -3,4 +3,5 @@
   <h3>Rendelj még ma pár kattintással, és akár 24 órán belül a küszöbödön lesz a legfrissebb és legszebb csomag, amit valaha láttál!</h3>
   <h3>Regisztrálj rendszerünkben, így nem szükséges minden rendelésnél újra megadnod az adatokat, és részt vehetsz a FrissPontok gyűjtésében is!</h3><h3> Kezdetnek 30-at ajándékba adunk az oldalunkra való regisztrációért!</h3>
   <h3 class="heart">Friss kosár - Prémium áru szívvel-lélekkel <mat-icon>favorite</mat-icon></h3>
+  <h2><a routerLink="/products">Tekintsd meg legfrissebb termékeinket!</a></h2>
 </div>
