--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -14,30 +14,16 @@
   </div>
 
 <div *ngIf="isFilterActive"><button color="primary" mat-raised-button (click)="goBackToCategoires();">Vissza a kategóriákhoz</button></div>
-<!--  <div style="border: 1px solid black; width: 500px; height: 500px" *ngIf="isFilterActive">-->
-
-<!--    <ul *ngIf="filteredProducts.length > 0">-->
-<!--      <li *ngFor="let product of filteredProducts">-->
-<!--        {{ product.name }}-->
-<!--      </li>-->
-<!--    </ul>-->
-<!--  </div>-->
-
-  <div fxLayoutAlign="center center" fxLayout="row wrap" class="category-container" *ngIf="isFilterActive">
+  <div fxLayoutAlign="center" fxLayout="row wrap" class="category-container" *ngIf="isFilterActive">
     <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of filteredProducts; let i = index">
       <mat-card-header class="category-title">
         <mat-card-title class="category-title">{{ category.name }}</mat-card-title>
       </mat-card-header>
       <mat-card-content class="image-container">
-<!--        <p>{{category.id}}</p>-->
-<!--*ngIf="categoryImagesFiltered[i].toLowerCase().includes(filteredProducts)" -->
         <img [src]="categoryImagesFiltered[i]" alt="Category Image" class="category-image">
         <p>Ár: {{category.price}} Ft /kg </p>
         <button mat-raised-button color="primary">Kosárba teszem</button>
       </mat-card-content>
-<!--      <mat-card-actions class="category-button">-->
-<!--        <button mat-raised-button color="primary" (click)="onSelectCategory(categoriesName[i])">Tovább</button>-->
-<!--      </mat-card-actions>-->
     </mat-card>
   </div>
 
