--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,7 +1,13 @@
 <div class="main_component">
-  <h1>Üdvözöllek online zöldség-gyümölcs üzletünkben{{ loggedInUser ? ", " + loggedInUser.name.firstname : '' }}!</h1>
-  <h3>Rendelj még ma pár kattintással, és akár 24 órán belül a küszöbödön lesz a legfrissebb és legszebb csomag, amit valaha láttál!</h3>
-  <h3>Regisztrálj rendszerünkben, így nem szükséges minden rendelésnél újra megadnod az adatokat, és részt vehetsz a FrissPontok gyűjtésében is!</h3><h3> Kezdetnek 30-at ajándékba adunk az oldalunkra való regisztrációért!</h3>
-  <h3 class="heart">Friss kosár - Prémium áru szívvel-lélekkel <mat-icon>favorite</mat-icon></h3>
-  <h2><a routerLink="/products">Tekintsd meg legfrissebb termékeinket!</a></h2>
+    <h1>Üdvözöllek online zöldség-gyümölcs üzletünkben{{ loggedInUser ? ", " + loggedInUser.name.firstname : '' }}!</h1>
+    <h3>Rendelj még ma pár kattintással, és akár 24 órán belül a küszöbödön lesz a legfrissebb és legszebb csomag, amit
+        valaha láttál!</h3>
+    <h3>Regisztrálj rendszerünkben, így nem szükséges minden rendelésnél újra megadnod az adatokat, és részt vehetsz a
+        FrissPontok gyűjtésében is!</h3>
+    <h3> Kezdetnek 30-at ajándékba adunk az oldalunkra való regisztrációért!</h3>
+    <h3 [ngStyle]="{  'font-weight': 'bold',
+  'font-style': 'italic'}">Friss kosár - Prémium áru szívvel-lélekkel
+        <mat-icon>favorite</mat-icon>
+    </h3>
+    <h2><a routerLink="/products">Tekintsd meg legfrissebb termékeinket!</a></h2>
 </div>
