--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -11,3 +11,12 @@
     </h3>
     <h2><a routerLink="/products">Tekintsd meg legfrissebb termékeinket!</a></h2>
 </div>
+
+<div [ngStyle]="{'visibility':'hidden'}">
+    <h2>
+        <strong>Ha esetleg ezt az errort látnád a konzolban, akkor kapcsolj ki minden böngészős bővítmény.</strong><br>
+        Unchecked runtime.lastError: A listener indicated an asynchronous response by returning true, but the message
+        channel closed before a response was received
+    </h2>
+</div>
+
