--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div *ngIf="isFilterActive" class="back-to-categ-button"><button color="primary" mat-raised-button (click)="goBackToCategoires();">Vissza a kategóriákhoz</button></div>
-  <div fxLayoutAlign="center" fxLayout="row wrap" class="category-container" *ngIf="isFilterActive">
+  <div fxLayoutAlign="space-around"  fxLayout="row wrap" class="category-container" *ngIf="isFilterActive">
     <mat-card fxFlex="calc(50% - 25px)" class="category-card" *ngFor="let category of filteredProducts; let i = index">
       <mat-card-header class="category-title">
         <mat-card-title class="category-title">{{ category.name }}</mat-card-title>
