--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -4,15 +4,13 @@
 }
 
 .category-container {
-  height: 100%;
+  height: 100vh;
   width: 50%;
   align-self: center;
   justify-content: center;
   align-items: center;
   vertical-align: center;
   padding: 10px;
-  //display: flex
-  //flex-wrap: wrap;
 
 }
 
@@ -24,22 +22,9 @@
   align-items: center;
 }
 
-//.category-card {
-//  max-width: 250px;
-//  margin: 10px;
-//  display: flex;
-//  flex-direction: column;
-//
-//}
-
-.back-to-top-button{
-  position: fixed;
-  top: 45%;
-  left: 10%;
-}
 .back-to-categ-button {
   position: fixed;
-  top: 50%;
+  z-index: 1;
   left: 10%;
 }
 
@@ -50,6 +35,7 @@
   justify-content: center;
   align-content: center;
 }
+
 
 .image-container {
   width: 100%;
@@ -77,14 +63,14 @@
 .category-button {
   font-size: 1.5em;
   align-self: center;
-}
+  margin-top: auto;}
 
 mat-card-content img {
   width: 400px;
   height: 200px;
 }
 
-.price{
+.price {
   margin-top: 10px;
   font-size: 2vh;
   font-family: "Signika Negative Light", monospace;
