--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -24,15 +24,17 @@
         <p class="price">Ár: {{category.price}} Ft /kg </p>
         <mat-form-field>
           <mat-label>Mennyiség (kg)</mat-label>
-          <mat-select [(value)]="selectedQuantities[i]">
-            <mat-option *ngFor="let quantity of quantities" [value]="quantity">
+          <mat-select [ngStyle]="{'font-family':'Signika Negative Light', 'font-weight':'bold'}" [(ngModel)]="selectedQuantities[i]">
+          <mat-option *ngFor="let quantity of quantities" [value]="quantity">
               {{ quantity }} kg - {{ quantity * category.price }} Ft
             </mat-option>
           </mat-select>
         </mat-form-field>
-        <button mat-raised-button color="accent">Kosárba teszem</button>
+        <button (click)="addToBasket(selectedQuantities[i], category)" mat-raised-button color="accent">Kosárba teszem</button>
+
       </mat-card-content>
     </mat-card>
+
   </div>
 </div>
 
