--- a/src/app/pages/basket/basket.component.html
+++ b/src/app/pages/basket/basket.component.html
@@ -1,3 +1,4 @@
 <div *ngFor="let item of basketItems">
-    <p>{{ item.quantity }} kg {{ item.category.name }}</p>
+    <p>{{ item.quantity }} kg {{ item.category.name }} ár: {{item.quantity * item.category.price}} Ft</p>
 </div>
+<p>{{totalAmount}}</p>
