fixed double loading spinner

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
-<span *ngIf="loading" class="loading-indicator"><mat-spinner></mat-spinner>
-</span>
+<!--EZ HOGY KERÜLT IDE <span *ngIf="loading" class="loading-indicator"><mat-spinner></mat-spinner>-->
+<!--</span>-->
 <div class="main_component">
   <div class="card">
     <div class="card-body">
