--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@ $bgcolor: azure;
 
 html {
     background-color: $bgcolor;
+    height: 100%;
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
